判断指定用户是否掉线
